fix horizontal scrollbar on animation time along with each page

--- a/src/containers/skills/Skills.css
+++ b/src/containers/skills/Skills.css
@@ -1,5 +1,6 @@
 .skills-main-div {
   display: flex;
+  overflow: hidden;
 }
 
 .skills-header {
