--- a/src/pages/contact/ContactComponent.css
+++ b/src/pages/contact/ContactComponent.css
@@ -1,5 +1,5 @@
 .contact-main {
-  width: 100vw;
+  width: 100%;
 }
 
 .basic-contact {
