--- a/src/pages/experience/Experience.css
+++ b/src/pages/experience/Experience.css
@@ -1,5 +1,5 @@
 .experience-main {
-  width: 100vw;
+  width: 100%;
 }
 
 .basic-experience {
