--- a/src/pages/projects/Projects.css
+++ b/src/pages/projects/Projects.css
@@ -1,5 +1,5 @@
 .projects-main {
-  width: 100vw;
+  width: 100%;
   text-align: center;
 }
 
